--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="index.js">
+        <script src="https://d3js.org/d3.v5.min.js"></script>
     </head>
 
     <body>
         <h1>Hello World!</h1>
+        <div id ="viz"></div>
+        <script src="firstViz.js"></script>
     </body>
 
-    <script src="https://d3js.org/d3.v5.min.js%22%3E%3C/script%3E">
-        
-    </script>
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+
+    <script src="index.js"></script>
 </html>
